--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+NeXeN NoC should provide :
+- Kea DHCP /w pgsql
+- Postgrey SQL database
+- Radius server
+- Public ip to connector routing
+
 Buildroot is a simple, efficient and easy-to-use tool to generate embedded
 Linux systems through cross-compilation.
 
